# PIAIC-Assignment

Fast APi Assignment TODO APP/: README.md  pyproject.toml
Fast APi Assignment TODO APP/todo/: crud.py  database.py  main.py  models.py  schemas.py
NEXT-ASSIGMENT-01/: README.md  package-lock.json  package.json
NEXT-ASSIGMENT-01/app/: page.tsx
NEXT-ASSIGMENT-02/: package-lock.json  package.json
NEXT-ASSIGMENT-02/app/: globals.css  layout.tsx  page.tsx  style.css
NEXT-ASSIGMENT-02/app/Blog/: page.tsx
NEXT-ASSIGMENT-02/app/Contact/: page.tsx
NEXT-ASSIGMENT-02/app/Course/: page.tsx
NEXT-ASSIGMENT-02/app/about/: page.tsx
NEXT-ASSIGMENT-03/: BlogsData.json  package-lock.json  package.json
NEXT-ASSIGMENT-03/app/: page.tsx
NEXT-ASSIGMENT-03/app/[blogsID]/: page.tsx
NEXT-ASSIGMENT-04/: package-lock.json  package.json
NEXT-ASSIGMENT-04/app/: layout.tsx  page.tsx
NEXT-ASSIGMENT-05/: package-lock.json  package.json
NEXT-ASSIGMENT-05/app/: page.tsx
NEXT-ASSIGMENT-05/app/contact/components/: contactForm.tsx  displayContact.tsx
NEXT-ASSIGMENT-05/types/: commonTypes.ts
NEXT-ASSIGMENT-06/: package-lock.json  package.json
NEXT-ASSIGMENT-06/app/ahmad/: page.tsx
PYTHON-01/: pyproject.toml
PYTHON-01/todo/: main.py
TS-1/: index.js  index.ts  package.json
TS-2/: index.js  index.ts  package.json
TS-3/: index.js  index.ts  package.json
TS-4/: index.js  index.ts  package.json
TS-5/: index.js  index.ts  package.json
TS-6/: index.js  index.ts  package.json
TS-7-45 Questions/: index.js  index.ts  package.json
