[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["devmianharoon <devmianharoon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
sqlmodel = "^0.0.16"
sqlalchemy = "^2.0.29"
pydantic = "^2.7.0"
psycopg2 = "^2.9.9"

[tool.poetry.scripts]
dev="todo.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
