[tool.poetry]
name = "todo"
version = "0.1.0"
description = ""
authors = ["Muhammad Zafeer <zafeerwains@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.110.1"
uvicorn = {extras = ["standard"], version = "^0.29.0"}

[tool.poetry.scripts]
dev="todo.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
